@@ -19,11 +19,16 @@ DIST gcc-4.4.2-patches-1.0.tar.bz2 11040 RMD160 008701ce22ef001049871824528d193f
 DIST gcc-4.4.2-specs-0.1.7.tar.bz2 1893 RMD160 52c21a4d8a3220660c8a9a71c4ce5977c152df14 SHA1 b4951083d8b715a7a9c7bb065c0b0a4221e69597 SHA256 42adbe507422026514a2cb104e592ae87f5d402929068c43d93d46f835752428
 DIST gcc-4.4.2-uclibc-patches-1.0.tar.bz2 2290 RMD160 23e52f8bdfb99c9b2af594ebde039ff6f2bd9291 SHA1 03759cce56a7f81f0c4b47b0309bfa9c785d8ea4 SHA256 d380566d5aa3c91820013fc5745b101824940cd5f553a33723c704dc3a066144
 DIST gcc-4.4.2.tar.bz2 62919816 RMD160 25014a64d148005868449dfebf91a734d6322227 SHA1 6cf7d9204ff3e1a09f4f12b1372cd4129ab7f080 SHA256 1126b6a7b585b3a178bfb7d559221779eb7eba12ce01bc9ca5896f6f9ee639de
+DIST gcc-4.4.3-espf-0.3.7.tar.bz2 18502 RMD160 86c73bc937ac3ce1d098adb09d2870d789b5059b SHA1 9ab3fb406b31ae866524fdafc091b38aa3940780 SHA256 f16b6ba4b61f5c7569a45cdaba5646e53052a204cd3d2bf33651b682b7a887e9
+DIST gcc-4.4.3-patches-1.0.tar.bz2 11853 RMD160 0f77684057cbaf94e81e3128cfbfbbbfbb50b618 SHA1 f47b6dea0bce00a7359d29a93cca5e6df350d074 SHA256 ff2e3ce1c6091ec41109e36e63f227fb8895a1972a91682fe6d698908653c87d
+DIST gcc-4.4.3-uclibc-patches-1.0.tar.bz2 3014 RMD160 4646449073c54a43f1b72382ab3c611789e6cb59 SHA1 7bb2d5ae871f1bbed51198c274518d2c8bc06689 SHA256 4b44eb274f27cc8ffb0e61e90d829a7a87fd0b49df6f31e7cb3071cc96c00df1
+DIST gcc-4.4.3.tar.bz2 62944934 RMD160 b51afac3cb77ee3dc09d29c2f85936482ed82ab2 SHA1 619766282734728539ce58a5c383cb371f1999c7 SHA256 97ed664694b02b4d58ac2cafe443d02a388f9cb3645e7778843b5086a5fec040
 EBUILD gcc-4.3.4-r1.ebuild 2158 RMD160 3fc887e746f738bdb28a3af6d819a0bf73cc20e4 SHA1 6f3f246cb947af3d39fe15308a98603fc5868b7e SHA256 6a3c619b187cb559039446d0d56c4b80874d120c7b16313be5f74dc4c92d1e34
 EBUILD gcc-4.3.4-r2.ebuild 2158 RMD160 18e822f174f96a5d2d0fa1fdec579cf8ea4faf28 SHA1 c02f7b4f7eaa6e4e8991696bd3e59e77aa1251b7 SHA256 614089caafb4479117c15eafdc55efea669cd3c36c1b8727773fe0d34eb2b313
 EBUILD gcc-4.4.1-r1.ebuild 2023 RMD160 5aa15ccded984ae2dfa34f2b157bf63f70589be0 SHA1 70fdaf8d84e06b82ed08075f3143f4a359438779 SHA256 4a15a77cbb72c700c13088ca19abab448731b9d0804f66a2851d6d063491b2da
 EBUILD gcc-4.4.1-r2.ebuild 2023 RMD160 c629460c38ed5812f9a294f0a4683d8831229403 SHA1 89e29bd57d7348aedc0d6abae73a1aacea75bf81 SHA256 e159f425f0e31be027d455ff8dc3c9cb006cdcb81865598859fd467871344516
 EBUILD gcc-4.4.2-r1.ebuild 2130 RMD160 976e981f07619036cd64cf2a4aceb5633727d786 SHA1 71ad09b787079bd00b6df19fb210b23bec2c04f9 SHA256 3572a8bc87505f08d7feb19fa10bf4cbe8eff699e3669a960eef08c738961a75
 EBUILD gcc-4.4.2-r2.ebuild 2189 RMD160 47321b579ce0035f097528ebe4b6ccdaa4bff1df SHA1 47f0f26bb2e5c6c0ee9407f818a0b74de62be2cd SHA256 a43ba766e36132eafe0dc44d5eb7cdf3874c509e1f8c43e064abe744bf606bd9
-MISC ChangeLog 1393 RMD160 5c852ccb297c18b82ab956ac778c4118fd145c94 SHA1 5e079657b678a44a7f3ffff60d7445a919ad306e SHA256 7f9f1bc191d785ab3b55f28b49fd87d7f567fbb4c3f5a4bac4a7e95f2e249721
+EBUILD gcc-4.4.3-r1.ebuild 2074 RMD160 6ad5477687e1c3ffde6ad810e2199fc9557b59ff SHA1 f1a977a0632a13d2331248dd17d824901090f8af SHA256 5ddeb8997b657dc9aa29027a33c168df022b4882fe07ac9c340e1fa42f8638af
+MISC ChangeLog 1497 RMD160 0cb87981301617e5d4bb1cee35a8daa8c3bcefbe SHA1 3e7504415a7538a5897c9a7ddf9fafa5684561b8 SHA256 82e50acccdbe2cb60e79d32060640092f17d1a79f8de119ba749b7780ed8c571
 MISC metadata.xml 1610 RMD160 de3ea2135f71f26100df1cc2c94f969f4fb58a10 SHA1 257abaaec0d10ed04c943b4db78f97833c6303ba SHA256 e0d36c00b5814e330850f731e2a4af8f9a1b77fde6499ce3964b7995520b13f6
