@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/gcc
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*gcc-4.4.3-r1 (10 Feb 2010)
+
+  10 Feb 2010; <zorry@gentoo.org> +gcc-4.4.3-r1.ebuild:
+  New GCC version
 
 *gcc-4.4.2-r2 (27 Dec 2009)
 
